# nounours-player

./: .gitignore  README.fr.md  README.md  build.sh  git.sh
.github/workflows/: build.yml  ci.yml  release.yml
etc/: nounours-player.desktop
packaging/archlinux/: PKGBUILD  PKGBUILD-AppImage  PKGBUILD-git
packaging/windows/: installer.iss  installer.nsi
src/: CMakeLists.txt  Nounours-Player.pro  gesturehandler.cpp  gesturehandler.h  jellyfinmanager.cpp  jellyfinmanager.h  mediainfohelper.cpp  mediainfohelper.h  mpvhandler.cpp  mpvhandler.h  mpvtypes.h  nounours-player.rc.in  nounourscommands.cpp  nounoursengine.cpp  nounoursengine.h  overlayhandler.cpp  overlayhandler.h  rsclist.qrc  settings.cpp  settings.h  translations.pri  translations.qrc  updatemanager.cpp  updatemanager.h  util.cpp
src/platform/: linux.cpp  osx.cpp  win.cpp  win32.cpp  win64.cpp
src/translations/: nounours-player_de.ts  nounours-player_es.ts  nounours-player_fr.ts  nounours-player_hr.ts  nounours-player_it.ts  nounours-player_ka.ts  nounours-player_ko.ts  nounours-player_nl.ts  nounours-player_pt_BR.ts  nounours-player_ru.ts  nounours-player_tr.ts  nounours-player_vi.ts  nounours-player_zh_CN.ts
src/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  jellyfinresultswidget.cpp  jellyfinresultswidget.h  jellyfinsearchdialog.cpp  jellyfinsearchdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediainfodialog.cpp  mediainfodialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  updatedialog.cpp  updatedialog.h  videoequalizer.cpp  videoequalizer.h
src/versions/: 2_0_3.cpp
src/widgets/: customslider.cpp  dimdialog.cpp  indexbutton.cpp  indexbutton.h  openbutton.cpp  playlistwidget.cpp  playlistwidget.h  seekbar.cpp  seekbar.h
